--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -4,11 +4,11 @@ html {
 
 body {
     color: var(--text-color);
-    font-family: var(--front-family-base)
+    font-family: var(--font-family-base)
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: var(--front-family-title);
+    font-family: var(--font-family-title);
 }
 
 a {
