--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -273,6 +273,10 @@ a:active {
     margin-right: auto;
 }
 
+.footer {
+    padding: var(--footer-padding);
+}
+
 :root {
     --color-primary: #d73953;
     --color-black: #090909;
